2012-12-04 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* Fixed issue where treeName would be improperly set for weight-based
	systematics. The solution assumes the old code, and checks if the tree
	name exists. If not, a treeName set to the name of the associated sample
	(plus possible prefix) is used for both high and low. This issue stems
	from a philosophical difference in approach with inputs: one tree
	containing branches for high and low, versus two trees (one each for high
	and low respectively). Issue needs more permanent resolving; current code
	is several hacks on top of each other.

2012-12-03 Max Baak <mbaak@cern.ch>
	M       configManager.py
	M       fitConfig.py
	* New feature: for overall sys, possibly use different channel to evaluate systematics
	M       prepareHistos.py
	M       configManager.py
	M       sample.py
	M       systematic.py


2012-12-02 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
    * scripts/HistFitter.py: missing nargs="+", strings would get chopped up

2012-11-27 Alex Koutsman <alex.koutsman@cern.ch>
	* src/Utils.cxx fixed bug in GetFullRegionName function used by YieldsTable script

2012-11-27 Alex Koutsman <alex.koutsman@cern.ch>
	* these changes were alrady done on 2012-11-14, but did not get saved in svn or overwritten  (?)
	* macros/Examples/pythonFreeConfig/Config_pythonFree.C : addition of example macro to run HistFitter C++ side without python side
	* src/ChannelStyle.cxx : adjustments for unknown samples	
	* src/ChannelStyle.h : addition of addSample() function		
	* python/configManager.py : using addSample function
	* src/Utils.cxx : fix in PlotNL function for inf/Nan propagated to plot error

2012-11-26 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	M       python/configManager.py
	M       python/prepareHistos.py
	M       python/systematic.py
	M       scripts/HistFitter.py
	* Improvements to speed; ~8% speed gain when running over 12 grid points

2012-11-22 Max Baak <mbaak@cern.ch>
	M       python/configManager.py