@@ -3,5 +3,6 @@ from measurement import Measurement
 from channel import Channel
 from sample import Sample
 
-
+from channelxml import ChannelXML
+from topLevelxml import TopLevelXML
 
