@@ -1,4 +1,7 @@
 2012-12-04 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
+	* channelxml.py and topLevelxml.py recreated for backwards compatibility.
+
+2012-12-04 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
 	* Fixed issue where treeName would be improperly set for weight-based
 	systematics. The solution assumes the old code, and checks if the tree
 	name exists. If not, a treeName set to the name of the associated sample
